Menu state loading structure has been changed, now everything is not in one class, but there is a class with functions, values, etc.

--- a/res/Text/Language/transleterENRU.json
+++ b/res/Text/Language/transleterENRU.json
@@ -78,7 +78,7 @@
 			},{
 				"name" : "audioRestart",
 				"EN" : "Reloading audio (when output device is changed)",
-				"RU" : "Перезагрузка аудио (при изменения устрайства вывода)"
+				"RU" : "Перезагрузка аудио (при изменении устрайства вывода)"
 			},{
 				"name" : "restart",
 				"EN" : "Reloading",
