the first step of creating a map, but for now, optimization is needed

--- a/res/Text/Language/transleterENRU.json
+++ b/res/Text/Language/transleterENRU.json
@@ -8,6 +8,10 @@
 				"EN" : "New Game",
 				"RU" : "Новая Игра"
 			},{
+				"name" : "game",
+				"EN" : "Start Game",
+				"RU" : "Начать Игру"
+			},{
 				"name" : "continue",
 				"EN" : "Continue",
 				"RU" : "Продолжить"
